# nyaa_comments

./: .gitignore  ANIMETOSHO.md  CHANGES.md  GEMINI.md  LICENSE  QUICKSTART_ANIMETOSHO.md  README.md  animetosho_scraper.py  comment_scraper.py  decrypt_database.py  nyaa_comments.py  nyaa_scraper.py  pyproject.toml
.github/workflows/: README.md  scrape.yml  scrape_animetosho.yml  scrape_sukebei.yml
classes/: animetosho_scraper.py  comment_models.py  database_manager.py  database_uploader.py  discord_webhook.py  nyaa_scraper.py  secrets.py  user_role.py
modules/: crypto_utils.py
