[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyaa-comments"
version = "1.0.0"
description = "A Python script that monitors Nyaa.si torrents for new comments and sends real-time notifications to Discord"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "geckyzz", email = "gecko.geckyzz@proton.me"}
]
keywords = ["nyaa", "scraper", "discord", "notifications", "torrent", "comments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "alive-progress>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/geckyzz/nyaa_comments"
Repository = "https://github.com/geckyzz/nyaa_comments"
Issues = "https://github.com/geckyzz/nyaa_comments/issues"

[project.scripts]
nyaa-comments = "nyaa_comments:app"

[tool.setuptools]
py-modules = ["nyaa_comments"]
